--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -277,6 +277,76 @@
                             </div>
                         </div>
                         <div class="portlet-body form  form-horizontal">
+                            <div class="form-group">
+
+                                <div class="col-md-6">
+                                    <label class=" uppercase font-weight "> Country</label>
+
+                                    <select class="form-control input-rounded " ng-model="profile.login_user.profile_for">
+                                        <option>Select</option>
+                                        <option value="son">Son</option>
+                                        <option value="daughter">Daughter</option>
+                                    </select>
+                                </div>
+
+                                <div class="col-md-6">
+                                    <label class=" uppercase font-weight  "> State </label>
+
+                                    <select class="form-control input-rounded " ng-model="profile.login_user.age">
+                                        <option>Select </option>
+                                        <option value="18">18</option>
+                                        <option value="19">19</option>
+                                        <option value="20">20</option>
+                                        <option value="21">21</option>
+                                        <option value="22">22</option>
+                                        <option value="23">23</option>
+                                        <option value="24">24</option>
+                                        <option value="25">25</option>
+                                        <option value="26">26</option>
+                                        <option value="27">27</option>
+                                        <option value="28">28</option>
+                                        <option value="29">29</option>
+                                    </select>
+                                </div>
+
+                            </div>
+
+                            <div class="form-group">
+
+                                <div class="col-md-6">
+                                    <label class=" uppercase font-weight "> City</label>
+
+                                    <select class="form-control input-rounded " ng-model="profile.login_user.height">
+                                        <option>Select</option>
+                                        <option value="170">5Ft 11In / 178 cm</option>
+                                        <option  value="171">6Ft 0In / 180 cm</option>
+                                        <option  value="172">5ft 0In / 150 cm</option>
+
+                                    </select>
+                                </div>
+
+                                <div class="col-md-6">
+                                    <label class=" uppercase font-weight  "> Citizenship</label>
+
+                                    <select class="form-control input-rounded " ng-model="profile.login_user.weight">
+                                        <option>Select </option>
+                                        <option  value="50">50Kg 115 Lbs</option>
+                                        <option  value="60">60Kg /135 Lbs</option>
+                                        <option  value="70">70Kg / 155 Lbs</option>
+                                        <option  value="75">75Kg / 175 Lbs</option>
+                                        <option  value="80">80Kg / 175 Lbs</option>
+
+
+
+                                    </select>
+                                </div>
+
+                            </div>
+                                                        <hr>
+
+
+
+
 
                             <div class="form-group">
 
@@ -325,6 +395,89 @@
                             </div>
                         </div>
                         <div class="portlet-body form  form-horizontal">
+                            <div class="form-group">
+
+                                <div class="col-md-6">
+                                    <label class=" uppercase font-weight "> Religion</label>
+
+                                    <select class="form-control input-rounded " ng-model="profile.login_user.height">
+                                        <option>Select</option>
+                                        <option value="170">5Ft 11In / 178 cm</option>
+                                        <option  value="171">6Ft 0In / 180 cm</option>
+                                        <option  value="172">5ft 0In / 150 cm</option>
+
+                                    </select>
+                                </div>
+
+                                <div class="col-md-6">
+                                    <label class=" uppercase font-weight  "> Caste /Sub caste</label>
+
+                                    <select class="form-control input-rounded " ng-model="profile.login_user.weight">
+                                        <option>Select </option>
+                                        <option  value="50">50Kg 115 Lbs</option>
+                                        <option  value="60">60Kg /135 Lbs</option>
+                                        <option  value="70">70Kg / 155 Lbs</option>
+                                        <option  value="75">75Kg / 175 Lbs</option>
+                                        <option  value="80">80Kg / 175 Lbs</option>
+
+
+
+                                    </select>
+                                </div>
+
+                            </div>
+                            <div class="form-group">
+
+                                <div class="col-md-6">
+                                    <label class=" uppercase font-weight "> Gothram</label>
+
+                                    <select class="form-control input-rounded " ng-model="profile.login_user.height">
+                                        <option>Select</option>
+                                        <option value="170">5Ft 11In / 178 cm</option>
+                                        <option  value="171">6Ft 0In / 180 cm</option>
+                                        <option  value="172">5ft 0In / 150 cm</option>
+
+                                    </select>
+                                </div>
+
+                                <div class="col-md-6">
+                                    <label class=" uppercase font-weight  "> Star / Rassi</label>
+
+                                    <select class="form-control input-rounded " ng-model="profile.login_user.weight">
+                                        <option>Select </option>
+                                        <option  value="50">50Kg 115 Lbs</option>
+                                        <option  value="60">60Kg /135 Lbs</option>
+                                        <option  value="70">70Kg / 155 Lbs</option>
+                                        <option  value="75">75Kg / 175 Lbs</option>
+                                        <option  value="80">80Kg / 175 Lbs</option>
+
+
+
+                                    </select>
+                                </div>
+
+                            </div>
+
+                            <div class="form-group">
+
+                                <div class="col-md-6">
+                                    <label class=" uppercase font-weight "> Chevvai Dosham / Rassi</label>
+
+                                    <select class="form-control input-rounded " ng-model="profile.login_user.height">
+                                        <option>Select</option>
+                                        <option value="170">5Ft 11In / 178 cm</option>
+                                        <option  value="171">6Ft 0In / 180 cm</option>
+                                        <option  value="172">5ft 0In / 150 cm</option>
+
+                                    </select>
+                                </div>
+
+
+
+                            </div>
+
+
+
 
                             <div class="form-group">
 
@@ -377,6 +530,89 @@
                             </div>
                         </div>
                         <div class="portlet-body form  form-horizontal">
+                            <div class="form-group">
+
+                                <div class="col-md-6">
+                                    <label class=" uppercase font-weight "> Education</label>
+
+                                    <select class="form-control input-rounded " ng-model="profile.login_user.height">
+                                        <option>Select</option>
+                                        <option value="170">5Ft 11In / 178 cm</option>
+                                        <option  value="171">6Ft 0In / 180 cm</option>
+                                        <option  value="172">5ft 0In / 150 cm</option>
+
+                                    </select>
+                                </div>
+
+                                <div class="col-md-6">
+                                    <label class=" uppercase font-weight  "> Educational in detail</label>
+
+                                    <select class="form-control input-rounded " ng-model="profile.login_user.weight">
+                                        <option>Select </option>
+                                        <option  value="50">50Kg 115 Lbs</option>
+                                        <option  value="60">60Kg /135 Lbs</option>
+                                        <option  value="70">70Kg / 155 Lbs</option>
+                                        <option  value="75">75Kg / 175 Lbs</option>
+                                        <option  value="80">80Kg / 175 Lbs</option>
+
+
+
+                                    </select>
+                                </div>
+
+                            </div>
+                            <div class="form-group">
+
+                                <div class="col-md-6">
+                                    <label class=" uppercase font-weight "> Occupation</label>
+
+                                    <select class="form-control input-rounded " ng-model="profile.login_user.height">
+                                        <option>Select</option>
+                                        <option value="170">5Ft 11In / 178 cm</option>
+                                        <option  value="171">6Ft 0In / 180 cm</option>
+                                        <option  value="172">5ft 0In / 150 cm</option>
+
+                                    </select>
+                                </div>
+
+                                <div class="col-md-6">
+                                    <label class=" uppercase font-weight  "> Employed in</label>
+
+                                    <select class="form-control input-rounded " ng-model="profile.login_user.weight">
+                                        <option>Select </option>
+                                        <option  value="50">50Kg 115 Lbs</option>
+                                        <option  value="60">60Kg /135 Lbs</option>
+                                        <option  value="70">70Kg / 155 Lbs</option>
+                                        <option  value="75">75Kg / 175 Lbs</option>
+                                        <option  value="80">80Kg / 175 Lbs</option>
+
+
+
+                                    </select>
+                                </div>
+
+                            </div>
+
+                            <div class="form-group">
+
+                                <div class="col-md-6">
+                                    <label class=" uppercase font-weight "> Annaul Income</label>
+
+                                    <select class="form-control input-rounded " ng-model="profile.login_user.height">
+                                        <option>Select</option>
+                                        <option value="170">5Ft 11In / 178 cm</option>
+                                        <option  value="171">6Ft 0In / 180 cm</option>
+                                        <option  value="172">5ft 0In / 150 cm</option>
+
+                                    </select>
+                                </div>
+
+
+
+                            </div>
+
+
+
 
                             <div class="form-group">
 
