--- a/src/app/navigation/dashboard/dbNavigation.html
+++ b/src/app/navigation/dashboard/dbNavigation.html
@@ -17,8 +17,8 @@
                                             <div class="col-xs-8 col-sm-8 col-md-7">
                                                 <div class="row ">
                                                     <div class="col-md-12">
-                                                        <span><span class="profile-name">Prem Joea</span>&nbsp;<span
-                                                                class="profile-id">(PD12345)</span></span>
+                                                        <span><span class="profile-name">{{profile.login_user.name}}</span>&nbsp;<span
+                                                                class="profile-id">({{profile.login_user.id_people}})</span></span>
                                                     </div>
                                                 </div>
                                                 <div class="row ">
