--- a/src/app/navigation/profile/profileNavigation.html
+++ b/src/app/navigation/profile/profileNavigation.html
@@ -6,8 +6,8 @@
                     <img style="width: 100px;height: 130px;!important;" src="assets/images/prof1.jpg"/>
                 </div>
                 <div class="col-md-12  " style="text-align:center;margin-top: 20px">
-                    <span class="bold">Prem Alex</span><br>
-                    (P234567)
+                    <span class="bold">{{profile.login_user.name}}</span><br>
+                    ({{profile.login_user.id_people}})
                 </div>
                 <div class="col-md-12  " style="text-align:center;margin-top: 20px">
                     <button ui-sref="managephoto" class="btn btn-sm red-mint" style="border-radius: 20px"><i class="fa fa-camera"></i> UPLOAD
