--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -12,8 +12,12 @@
         </div>
         <div class="portlet-body form">
             <!-- BEGIN FORM-->
-            <form action="#" class="form-horizontal  ">
+            <form name="regForm" class="form-horizontal  ">
                 <br>
+
+                <div class="row" style="color: red;text-align: center;margin: 20px">
+                    {{message}}
+                </div>
 
                 <div class="form-group">
                     <label class="col-md-3 control-label text-left">PROFILE FOR</label>
@@ -30,10 +34,10 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="col-md-3 control-label text-left ">NAME</label>
+                    <label class="col-md-3 control-label text-left ">NAME <span style="color: red">*</span></label>
 
                     <div class="col-md-8">
-                        <input type="text" class="form-control input-rounded" placeholder="Name" ng-model="reg.name">
+                        <input type="text" required class="form-control  input-rounded" placeholder="Name" ng-model="reg.name">
                     </div>
                 </div>
 
@@ -63,36 +67,36 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-md-3 control-label">DATE OF BIRTH</label>
+                    <label class="col-md-3 control-label">DATE OF BIRTH<span style="color: red">*</span></label>
 
                     <div class="col-md-8">
-                        <input type="date" class="form-control input-rounded" ng-model="reg.dob" placeholder="Date of Birth">
+                        <input type="date" required class="form-control input-rounded" ng-model="reg.dob" placeholder="Date of Birth">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-md-3 control-label ">RELIGION</label>
+                    <label class="col-md-3 control-label ">RELIGION<span style="color: red">*</span></label>
 
 
                     <div class="col-md-8">
                         <select class="form-control input-rounded "
-                                ng-model="reg.religion">
-                            <option ng-repeat="obj in religonList" value="obj.id_religion">{{obj.religion}}</option>
+                                ng-model="reg.religion" required>
+                            <option ng-repeat="obj in religonList" value="{{obj.id_religion}}">{{obj.religion}}</option>
                         </select>
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label class="col-md-3 control-label">EMAIL</label>
+                    <label class="col-md-3 control-label">EMAIL<span style="color: red">*</span></label>
 
                     <div class="col-md-8">
-                        <input type="email" ng-model="reg.email" class="form-control input-rounded" placeholder="Email Address">
+                        <input type="email" ng-model="reg.email" required class="form-control input-rounded" placeholder="Email Address">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-md-3 control-label">MOBILE NUMBER</label>
+                    <label class="col-md-3 control-label">MOBILE NUMBER<span style="color: red">*</span></label>
 
                     <div class="col-md-3">
-                        <select class="form-control input-rounded" ng-model="reg.code">
+                        <select class="form-control input-rounded" required ng-model="reg.code">
                             <option>+ 91</option>
                             <option>+ 04</option>
                             <option>+ 90</option>
@@ -102,15 +106,15 @@
                     </div>
 
                     <div class="col-md-5">
-                        <input type="number" class="form-control input-rounded" ng-model="reg.mobile" placeholder="Mobile Number">
+                        <input type="number" required class="form-control input-rounded" ng-model="reg.mobile" placeholder="Mobile Number">
                     </div>
                 </div>
 
                 <div class="form-group ">
-                    <label class="col-md-3 control-label">PASSWORD</label>
+                    <label class="col-md-3 control-label">PASSWORD<span style="color: red">*</span></label>
 
                     <div class="col-md-8">
-                        <input type="password" class="form-control input-rounded" ng-model="reg.password" placeholder="Password"
+                        <input required type="password" class="form-control input-rounded" ng-model="reg.password" placeholder="Password"
                                style="margin-rightt: 5%">
                     </div>
                 </div>
@@ -128,7 +132,7 @@
                     <label class="col-md-3 control-label"></label>
 
                     <div class="col-md-8">
-                        <button type="button" class=" center-block col-md-12 btn red input-rounded"
+                        <button ng-disabled="regForm.$invalid" type="button" class=" center-block col-md-12 btn red input-rounded"
                                 ng-click="vm.registerCandidate()">
                             Registration
                         </button>
