--- a/src/app/main/matches/matches.html
+++ b/src/app/main/matches/matches.html
@@ -48,7 +48,7 @@
                             </div>
                         </div>
                     </div>
-                    <div style="padding: 20px;color: red;text-align: center">{{message}}</div>
+                    <div style="color: red;text-align: center">{{message}}</div>
                                         <span ng-repeat="item in matches">
 
                     <div class="portlet light bordered">
@@ -144,7 +144,7 @@
                                 </div>
 
                             </div>
-                            <div class=" row vp-main-action" >
+                            <div class=" row vp-main-action" ng-if="mainlink !='shortlisted'">
                                 <div style="text-transform: uppercase;text-align: center;">
                                     <button class="col-md-3"
                                          style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro;cursor: pointer" ng-click="shortlist(item.id_people)"><i
@@ -159,6 +159,24 @@
                                             class="fa fa-commenting-o"></i> Chat now
                                     </div>
                                     <div class="col-md-3"
+                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: #e7505a"><i
+                                            class="fa fa-heart" style="color: white!important;font-size: 18px"></i> Send Interest
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class=" row vp-main-action" ng-if="mainlink =='shortlisted'">
+                                <div style="text-transform: uppercase;text-align: center;">
+
+                                    <div class="col-md-4"
+                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro;text-align: center">
+                                        <i class="fa fa-phone"></i> Call now
+                                    </div>
+                                    <div class="col-md-4"
+                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
+                                            class="fa fa-commenting-o"></i> Chat now
+                                    </div>
+                                    <div class="col-md-4"
                                          style="padding: 20px;border: 1px solid #eef1f5;background-color: #e7505a"><i
                                             class="fa fa-heart" style="color: white!important;font-size: 18px"></i> Send Interest
                                     </div>
