--- a/src/app/navigation/matches/matchesNavigation.html
+++ b/src/app/navigation/matches/matchesNavigation.html
@@ -59,10 +59,30 @@
                                         <div class="col-md-4 margin-bottom-10">
                                             <div class="row">
                                                 <div class="col-md-12 margin-top-10">
-                                                    <select class="custom-form-control">
-                                                        <option>18</option>
-                                                        <option>19</option>
-                                                        <option>20</option>
+                                                    <select class="custom-form-control" ng-model="age.start">
+                                                        <option value="18">18</option>
+                                                        <option value="19">19</option>
+                                                        <option value="20">20</option>
+                                                        <option value="21">21</option>
+                                                        <option value="22">22</option>
+                                                        <option value="23">23</option>
+                                                        <option value="24">24</option>
+                                                        <option value="25">25</option>
+                                                        <option value="26">26</option>
+                                                        <option value="27">27</option>
+                                                        <option value="28">28</option>
+                                                        <option value="29">29</option>
+                                                        <option value="30">30</option>
+                                                        <option value="31">31</option>
+                                                        <option value="32">32</option>
+                                                        <option value="33">33</option>
+                                                        <option value="34">34</option>
+                                                        <option value="35">35</option>
+                                                        <option value="36">36</option>
+                                                        <option value="37">37</option>
+                                                        <option value="38">38</option>
+                                                        <option value="39">39</option>
+                                                        <option value="40">40</option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -70,10 +90,30 @@
                                         <div class="col-md-4 margin-bottom-10">
                                             <div class="row">
                                                 <div class="col-md-12 margin-top-10">
-                                                    <select class="custom-form-control">
-                                                        <option>18</option>
-                                                        <option>19</option>
-                                                        <option>20</option>
+                                                    <select class="custom-form-control" ng-model="age.end">
+                                                        <option value="18">18</option>
+                                                        <option value="19">19</option>
+                                                        <option value="20">20</option>
+                                                        <option value="21">21</option>
+                                                        <option value="22">22</option>
+                                                        <option value="23">23</option>
+                                                        <option value="24">24</option>
+                                                        <option value="25">25</option>
+                                                        <option value="26">26</option>
+                                                        <option value="27">27</option>
+                                                        <option value="28">28</option>
+                                                        <option value="29">29</option>
+                                                        <option value="30">30</option>
+                                                        <option value="31">31</option>
+                                                        <option value="32">32</option>
+                                                        <option value="33">33</option>
+                                                        <option value="34">34</option>
+                                                        <option value="35">35</option>
+                                                        <option value="36">36</option>
+                                                        <option value="37">37</option>
+                                                        <option value="38">38</option>
+                                                        <option value="39">39</option>
+                                                        <option value="40">40</option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -83,7 +123,7 @@
                                                 <div class="col-md-12 margin-top-10">
                                                     <button type="button"
                                                             class="pull-left btn btn-sm btn-outline custom-button"><span
-                                                            class="btn-label-text">Submit</span></button>
+                                                            class="btn-label-text" ng-click="agefilter()">Submit</span></button>
                                                 </div>
                                             </div>
                                         </div>
