--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -85,8 +85,10 @@
                                       <div class="upload-btn-wrapper">
                                           <button class="btn"
                                                   style="background-image:url('../assets/images/upload.png');width: 180px;height: 180px "></button>
-                                          <input type="file" name="myfile"/>
+                                          <input type = "file" file-model = "myFile" name="myFile" />
                                       </div>
+                                                         <button ng-click = "uploadFile()">upload me</button>
+
 
                                 </span></div>
                                         </div>
@@ -100,6 +102,11 @@
                             </div>
                         </div>
 
+                        <input type="file" id="myFile">
+                        <button ng-click = "uploadFile()">Try it</button>
+
+                    </div>
+                    </div>
                         <div class="row">
                             <div class="col-sm-3" ng-repeat="image in images">
                                 <div class="thumbnail">
