--- a/src/app/main/managephotos/managephoto.css
+++ b/src/app/main/managephotos/managephoto.css
@@ -73,3 +73,20 @@
     border-bottom: 4px solid red;
     border-right: 4px solid red;
 }
+
+.fileUpload {
+    position: relative;
+    overflow: hidden;
+    margin: 10px;
+}
+.fileUpload input.upload {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    cursor: pointer;
+    opacity: 0;
+    filter: alpha(opacity=0);
+}
