--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -97,12 +97,19 @@
                                     <div class="col-md-6">
                                         <button type="button" class="btn btn-primary">Facebook</button>
 
+                                        <div class="fileUpload btn btn-primary">
+                                            <span>Upload</span>
+                                            <input type="file" id="myFile" class="upload" >
+
+                                        </div>
+
+
                                     </div>
                                 </div>
                             </div>
                         </div>
 
-                        <input type="file" id="myFile">
+                        <!--<input type="file" id="myFile">-->
                         <button ng-click = "uploadFile()">Try it</button>
 
                     </div>
