--- a/src/app/navigation/dashboard/dbNavigation.html
+++ b/src/app/navigation/dashboard/dbNavigation.html
@@ -11,7 +11,7 @@
                                     <div class="col-md-12">
                                         <div class="row ">
                                             <div class=" col-xs-4 col-sm-4 col-md-3 ">
-                                                <img class="profile-image spacer" ng-src="../assets/images/prof1.jpg"/>
+                                                <img class="profile-image spacer" ng-src="{{image_url}}"/>
                                             </div>
                                             <div class="col-md-1 hidden-xs hidden-sm"></div>
                                             <div class="col-xs-8 col-sm-8 col-md-7">
